# pyfolds

./: .gitignore  CHANGELOG.md  COMANDOS_TREINO_FOLDSNET.md  CONTRIBUTING.md  FOLD_QUALITY_PLAN.md  MANIFEST.in  Makefile  PROMPTS_MELHORIA.md  PROMPT_CODEX_PROXIMA_EXECUCAO.md  README.md  RELATORIO_AUDITORIA_TECNICA_PYFOLDS.md  REPORT_MPJRD_FIXES.md  RISK_REGISTER.md  SUMARIO_COMPLETO.md  VISUAL_FINAL.txt  analise_bugs.md  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  revisao_fold_mind.md  run_pyfolds.py  setup.cfg  setup.py  solucoes_fold_mind.py  tarefas_pendentes.md  test_install.py  train_foldsnet_auto.py  train_foldsnet_presets.py  train_mnist.py  train_mnist_folds.py  train_mnist_mind.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto-sync-hub.yml  benchmarks.yml  check-links.yml  ci.yml  generate-dashboard.yml  project-board-automation.yml  publish.yml  sheeraudit.yml  sync_hub.yml  validate-docs.yml  validate-issues-pr.yml  validate-issues.yml  validate-release-version.yml  validate_hub.yml
benchmarks/: bench_foldio.py  bench_leibreg_proximity.py  bench_stats_accumulator_modes.py  compare_foldsnet.py  history.json  regression_detector.py  serialization_security_benchmark.py
docs/: ALGORITHM.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_V3.md  AUDITORIA_ARQUITETURA_V1.md  BENCHMARKS.md  COOPERATIVE_INTEGRATION.md  DEVELOPMENT_HUB.md  FOLD_SPECIFICATION.md  FREEZE_v2.1.1_REPORT.md  PHASE_CODING.md  PROMPT_CODEX_EQUIPE_1000_ENGENHEIROS.md  README-mnist-training.md  README.md  RELATORIO_FINAL_EXECUCAO_TESTES_ISSUE-010.md  RELATORIO_INVESTIGACAO_FALHAS_E_SKIPS_ISSUE-010.md  RELATORIO_TESTES_BENCHMARK.md  SCIENTIFIC_BASIS_V3.md  SCIENTIFIC_LOGIC.md  STABLE_CORE_ARCHITECTURE.md  WAVELENGTH_MAPPING.md  conf.py  engineering_review.md  hardening-final-v2-1-1.md  hardening-report.md  index.md  installation.md  orientacoes_codigo.md  quickstart.md  refactor_report.md  resultado-testes-completo.md  runner_implementation_prompt.md
docs/ADR/: ADR-02-mnist-training-folds-mind.md
docs/_quickstart/: README.md
docs/_static/: custom.css
docs/adr/: 0001-import-contract-and-release-readiness.md  0040-conclusao-do-ciclo-issue-e-foco-em-execucao.md  0041-modelo-de-fases-ciclo-continuo-e-legado.md  0042-blindagem-checkpoint-safetensors-ecc-e-flush-lazy.md  ADR-001-container-fold-mind.md  ADR-001-formalizacao-spec-fold-mind.md  ADR-001-governanca-decisoes-fold.md  ADR-001-phase-context.md  ADR-002-container-fold-mind.md  ADR-002-integridade-por-chunk-e-ecc.md  ADR-002-spatial-neuron-coordinates.md  ADR-003-correcao-regressoes-hardening.md  ADR-003-desserializacao-segura-torch.md  ADR-003-integridade-ecc-por-chunk.md  ADR-003-phase-stdp.md  ADR-004-correcao-regressoes-refratario-serializacao-api.md  ADR-004-limites-defensivos-de-io.md  ADR-004-speech-envelope-context.md  ADR-005-leitura-parcial-com-indice-e-mmap.md  ADR-005-sleep-replay.md  ADR-006-connectivity-and-pruning-masks.md  ADR-006-limite-max-index-size.md  ADR-006-safe-weight-law.md  ADR-007-debug-and-observability.md  ADR-007-proposta-max-chunk-size.md  ADR-007-teste-corrupcao-recuperacao-segura.md  ADR-008-estabilidade-api-e-semantica-refrataria.md  ADR-008-homeostase-com-anti-windup.md  ADR-009-governanca-operacao-release.md  ADR-009-seguranca-desserializacao-torch.md  ADR-021-speech-envelope-extraction.md  ADR-022-envelope-event-detection.md  ADR-023-phase-reset-on-audio-events.md  ADR-024-cross-frequency-coupling.md  ADR-025-spatial-latency-gradient.md  ADR-030-centralizacao-do-tempo-no-neuronio-base.md  (+3 more)
examples/: INSTRUCOES_MNIST_FILE_LOGGING.md  mnist_file_logging.py  mnist_global_configurable.py  mnist_wave.py  mnist_wave_readout.py  run_mnist_silent.py  security_async_io.py  security_basic.py  security_high.py  security_recovery.py  security_sharding.py  telemetry_basic.py  telemetry_prometheus.py  telemetry_tensorboard.py
foldsnet/: __init__.py  connections.py  factory.py  layers.py  model.py  serialization.py
models/: model_mpjrd.py  model_py.py  model_wave.py
outputs/: PRINCIPAL_ENGINEERING_AUDIT_2026-03-10.md  PYFOLDS_AUDIT_REPORT.md  PYFOLDS_VERSION_AUDIT_v1.0.1.md  RELATORIO_INSTALACAO_E_TESTES_2026-02-20.md  RELATORIO_TESTES_E_CRIPTOGRAFIA_2026-02-20.md
prompts/: README-WORKFLOW-BLOCO.md  README.md
scripts/: analyze_foldsnet_architecture.py  generate_benchmarks_doc.py  run_benchmarks.py  run_full_audit.sh  run_minstmind.sh  run_mnist.ps1  run_mnistfolds.sh
serialization/: folds_io.py  mind_io.py
test/: mnist_training.py
tests/: __init__.py  checkpoint.py  conftest.py  test_concurrent_reads.py  test_corruption_detection.py  test_fold_corruption.py  test_fold_fuzz.py  test_forward.py  test_layers.py  test_neuron_properties.py  test_serialization.py  test_stress_long.py
tools/: batch_create_issues.py  check_api_docs.py  check_failure_regression_policy.py  check_issue_links.py  check_links.py  check_queue_governance.py  check_release_versions.py  create_failure_issues.py  create_issue_report.py  docs_hub_audit.py  generate_html_dashboard.py  harden.sh  id_registry.py  parse_sheer_failures.py  setup_pyfolds_board.py  sync_hub.py  sync_hub_auto.py  validate_docs_links.py  validate_issue_format.py  verify_hardening.py
train/: train_foldsnet.py
training/: mnist_cifar_tuning_pipeline.py  mnist_pipeline.py
(+653 files in other folders)
