[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfolds"
version = "2.0.0"
description = "MPJRD Neural Computation Framework"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "PyFolds Contributors" }]
dependencies = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "numpy>=1.24.0",
  "zstandard>=0.21.0",
  "google-crc32c>=1.5.0",
  "reedsolo>=1.7.0",
]

[project.optional-dependencies]
full = [
  "zstandard>=0.21.0",
  "google-crc32c>=1.5.0",
  "h5py>=3.8.0",
  "msgpack>=1.0.5",
  "reedsolo>=1.7.0",
  "lz4>=4.3.2",
  "matplotlib>=3.7.0",
  "tqdm>=4.65.0",
]
serialization = [
  "h5py>=3.8.0",
  "msgpack>=1.0.5",
  "zstandard>=0.21.0",
  "reedsolo>=1.7.0",
  "google-crc32c>=1.5.0",
]
telemetry = ["matplotlib>=3.7.0"]
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "isort>=5.0.0",
  "mypy>=1.0.0",
]
examples = [
  "torchvision>=0.15.0",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
pyfolds = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\\.pyi?$'
extend-exclude = '''
/(
    \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
