[metadata]
name = pyfolds
version = 0.1.0
author = Antonio Carlos
author_email = jrduraes90@gmail.com
description = Framework for Organizing Learning and Dendritic Structures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mindfolds-labs/pyfolds
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords =
    neuroscience
    dendrites
    plasticity
    pytorch
    snn
    computational-neuroscience

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.19.0
    torch>=1.10.0
    torchvision>=0.15.0      # ✅ ADICIONADO COMO CORE!
include_package_data = True
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests
    examples
    # docs NÃO está excluído!

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    black>=24.0
    isort>=5.12
    flake8>=7.0
    mypy>=1.7
    pre-commit>=3.0
    
# vision removido (agora é core)
docs =
    sphinx>=7.0
    sphinx-rtd-theme>=1.3
    myst-parser>=2.0

[options.entry_points]
console_scripts =
    pyfolds-test = pyfolds.scripts.test_install:main

[bdist_wheel]
universal = false

[egg_info]
tag_build =
tag_date = 0