[metadata]
name = pyfolds
version = 1.0.1
description = MPJRD Neural Computation Framework
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords =
    neuroscience
    dendrites
    plasticity
    pytorch

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.24.0
    torch>=2.0.0
    torchvision>=0.15.0
    zstandard>=0.21.0
    google-crc32c>=1.5.0
    reedsolo>=1.7.0
include_package_data = True
zip_safe = False

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
pyfolds =
    py.typed

[options.extras_require]
full =
    zstandard>=0.21.0
    google-crc32c>=1.5.0
    h5py>=3.8.0
    msgpack>=1.0.5
    reedsolo>=1.7.0
    lz4>=4.3.2
    matplotlib>=3.7.0
    tqdm>=4.65.0
serialization =
    h5py>=3.8.0
    msgpack>=1.0.5
    zstandard>=0.21.0
    reedsolo>=1.7.0
    google-crc32c>=1.5.0
telemetry =
    matplotlib>=3.7.0
dev =
    pytest>=7.0.0
    black>=23.0.0
    isort>=5.0.0
    mypy>=1.0.0
examples =
    torchvision>=0.15.0

[bdist_wheel]
universal = false
